fixed products page on smaller screens

--- a/public/css/products.css
+++ b/public/css/products.css
@@ -721,3 +721,22 @@ h1, .main-heading {
     justify-content: center;
   }
 }
+
+@media (max-width: 400px) {
+  h2 {
+    font-size: 2rem;
+  }
+  #product-filters select {
+    font-size: 0.8em;
+    padding: 0.3em 0.7em 0.3em 0.5em;
+    min-width: 90px;
+  }
+  #product-filters {
+    gap: 0.6rem;
+    padding: 0.4em 0.5em;
+  }
+  .download-catalog-btn {
+    font-size: 0.65rem;
+    font-weight: 400;
+  }
+}
